@@ -5,6 +5,10 @@ import guess.domain.GuessMode;
 import guess.domain.Language;
 import guess.domain.question.*;
 import guess.domain.source.*;
+import guess.domain.tagcloud.SerializedWordFrequency;
+import guess.util.tagcloud.TagCloudUtils;
+import mockit.Mock;
+import mockit.MockUp;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -143,7 +147,10 @@ class QuestionDaoImplTest {
                                 List.of(
                                         new SpeakerByCompanyQuestion(List.of(speaker0), company0)
                                 ),
-                                Collections.emptyList()
+                                Collections.emptyList(),
+                                List.of(
+                                        new TagCloudQuestion(speaker0, Collections.emptyMap())
+                                )
                         ),
                         new QuestionSet(
                                 event1,
@@ -155,7 +162,10 @@ class QuestionDaoImplTest {
                                 ),
                                 Collections.emptyList(),
                                 Collections.emptyList(),
-                                List.of(new SpeakerQuestion(speaker1))
+                                List.of(new SpeakerQuestion(speaker1)),
+                                List.of(
+                                        new TagCloudQuestion(speaker1, Collections.emptyMap())
+                                )
                         ),
                         new QuestionSet(
                                 event2,
@@ -168,10 +178,12 @@ class QuestionDaoImplTest {
                                 ),
                                 Collections.emptyList(),
                                 Collections.emptyList(),
-                                List.of(new SpeakerQuestion(speaker2))
+                                List.of(new SpeakerQuestion(speaker2)),
+                                Collections.emptyList()
                         ),
                         new QuestionSet(
                                 event3,
+                                Collections.emptyList(),
                                 Collections.emptyList(),
                                 Collections.emptyList(),
                                 Collections.emptyList(),
@@ -237,7 +249,10 @@ class QuestionDaoImplTest {
                         List.of(
                                 new SpeakerByCompanyQuestion(List.of(speaker0), company0)
                         ),
-                        Collections.emptyList()
+                        Collections.emptyList(),
+                        List.of(
+                                new TagCloudQuestion(speaker0, Collections.emptyMap())
+                        )
                 )),
                 questionDao.getSubQuestionSets(
                         Collections.singletonList(0L),
@@ -247,6 +262,7 @@ class QuestionDaoImplTest {
         assertEquals(
                 List.of(new QuestionSet(
                         event3,
+                        Collections.emptyList(),
                         Collections.emptyList(),
                         Collections.emptyList(),
                         Collections.emptyList(),
@@ -269,7 +285,10 @@ class QuestionDaoImplTest {
                         ),
                         Collections.emptyList(),
                         Collections.emptyList(),
-                        List.of(new SpeakerQuestion(speaker1))
+                        List.of(new SpeakerQuestion(speaker1)),
+                        List.of(
+                                new TagCloudQuestion(speaker1, Collections.emptyMap())
+                        )
                 )),
                 questionDao.getSubQuestionSets(
                         Collections.singletonList(1L),
@@ -287,7 +306,10 @@ class QuestionDaoImplTest {
                                 ),
                                 Collections.emptyList(),
                                 Collections.emptyList(),
-                                List.of(new SpeakerQuestion(speaker1))
+                                List.of(new SpeakerQuestion(speaker1)),
+                                List.of(
+                                        new TagCloudQuestion(speaker1, Collections.emptyMap())
+                                )
                         ),
                         new QuestionSet(
                                 event2,
@@ -300,7 +322,8 @@ class QuestionDaoImplTest {
                                 ),
                                 Collections.emptyList(),
                                 Collections.emptyList(),
-                                List.of(new SpeakerQuestion(speaker2))
+                                List.of(new SpeakerQuestion(speaker2)),
+                                Collections.emptyList()
                         )
                 ),
                 questionDao.getSubQuestionSets(
@@ -374,6 +397,22 @@ class QuestionDaoImplTest {
                         Collections.emptyList(),
                         Collections.emptyList(),
                         GuessMode.GUESS_SPEAKER_BY_ACCOUNT_MODE
+                )
+        );
+        assertEquals(
+                Collections.emptyList(),
+                questionDao.getQuestionByIds(
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        GuessMode.GUESS_TAG_CLOUD_BY_SPEAKER_MODE
+                )
+        );
+        assertEquals(
+                Collections.emptyList(),
+                questionDao.getQuestionByIds(
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        GuessMode.GUESS_SPEAKER_BY_TAG_CLOUD_MODE
                 )
         );
         assertEquals(
@@ -476,11 +515,45 @@ class QuestionDaoImplTest {
                 null,
                 null,
                 List.of(speakerByCompanyQuestion0, speakerByCompanyQuestion1, speakerByCompanyQuestion2),
-                null);
+                null,
+                null
+        );
         List<Question> expected = List.of(
                 new SpeakerByCompanyQuestion(List.of(speaker0, speaker1), company0),
                 new SpeakerByCompanyQuestion(List.of(speaker2), company1));
         List<Question> actual = QuestionDaoImpl.getSpeakerByCompanyQuestions(List.of(questionSet));
+
+        assertTrue(expected.containsAll(actual) && actual.containsAll(expected));
+    }
+
+    @Test
+    void getTagCloudBySpeakerQuestions() {
+        TagCloudQuestion tagCloudQuestion0 = new TagCloudQuestion(speaker0, Collections.emptyMap());
+        TagCloudQuestion tagCloudQuestion1 = new TagCloudQuestion(speaker1, Collections.emptyMap());
+        TagCloudQuestion tagCloudQuestion2 = new TagCloudQuestion(speaker2, Collections.emptyMap());
+        QuestionSet questionSet = new QuestionSet(
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                List.of(tagCloudQuestion0, tagCloudQuestion1, tagCloudQuestion2)
+        );
+        List<Question> expected = List.of(
+                new TagCloudQuestion(speaker0, Collections.emptyMap()),
+                new TagCloudQuestion(speaker1, Collections.emptyMap()),
+                new TagCloudQuestion(speaker2, Collections.emptyMap()));
+
+        new MockUp<TagCloudUtils>() {
+            @Mock
+            Map<Language, List<SerializedWordFrequency>> mergeWordFrequenciesMaps(
+                    List<Map<Language, List<SerializedWordFrequency>>> languageWordFrequenciesMapList) {
+                return Collections.emptyMap();
+            }
+        };
+
+        List<Question> actual = QuestionDaoImpl.getTagCloudBySpeakerQuestions(List.of(questionSet));
 
         assertTrue(expected.containsAll(actual) && actual.containsAll(expected));
     }
